<resources>
    <string name="app_name">Ambi Widget</string>
    <string name="activity_label_settings">Widget Settings</string>
    <string name="activity_label_auth">Widget Authorization</string>
    <string name="appwidget_text">Ambi Widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <!--Comfort Tags-->
    <string name="hot_tag">hot</string>
    <string name="too_warm_tag">too_warm</string>
    <string name="bit_warm_tag">bit_warm</string>
    <string name="comfy_tag">comfortable</string>
    <string name="bit_cold_tag">bit_cold</string>
    <string name="too_cold_tag">too_cold</string>
    <string name="freezing_tag">freezing</string>

    <!--Comfort Tags to Displayed Text-->
    <string name="hot">Hot</string>
    <string name="too_warm">Too warm</string>
    <string name="bit_warm">A bit warm</string>
    <string name="comfy">Comfy</string>
    <string name="bit_cold">A bit cold</string>
    <string name="too_cold">Too cold</string>
    <string name="freezing">Freezing</string>

    <string name="off_state">Off</string>
    <string name="on_state">On</string>
    <string name="button_on_off">On/Off</string>

    <!--Switch device tags-->
    <string name="btn_previous_tag">previous</string>
    <string name="btn_next_tag">next</string>

    <!--Preferences-->

    <!--Temperature scale list-->
    <string name="pref_tempScale_label">Temperature Scale</string>
    <string name="pref_tempScale_key" translatable="false">temperature_scale</string>

    <!--Option labels-->
    <string name="pref_tempScale_label_celsius">Celsius</string>
    <string name="pref_tempScale_label_fahrenheit">Fahrenheit</string>

    <!--Option values-->
    <string name="pref_tempScale_value_celsius" translatable="false">celsius</string>
    <string name="pref_tempScale_value_fahrenheit" translatable="false">fahrenheit</string>

    <!--Preferred device list-->
    <string name="pref_preferredDevice_label">Preferred Device</string>
    <string name="pref_preferredDevice_key" translatable="false">preferred_device</string>

    <!--Checkbox show device lcoation-->
    <string name="pref_showdevicelocation">false</string>
    <string name="pref_showdevicelocation_key" translatable="false">show_device_location</string>
    <string name="pref_showdevicelocation_label">Show device location</string>
    <string name="pref_showdevicelocation_summary">Display device name + location.</string>

    <!-- Toolbar -->
    <string name="action_settings_done">Done</string>
    <string name="action_settings">Settings</string>
    
    <!-- Main Page -->
    <string name="label_intro">Widget</string>
    <string name="text_intro">With this app you can create Widgets to control your Ambi Climate Device.</string>

    <!-- Instructions -->
    <string name="label_intructions">How to add a Widget:</string>
    <string name="text_instructions">1. Go to one of your Home Screens. \n2. Press and hold on empty space. \n3. Press \"Widgets\". \n4. Look for the \"Ambi Widget\". \n5. Drag the Widget to a desired place. \n6. Done!</string>

    <!-- Login / Authentication -->
    <string name="label_authorize">Authentication required</string>
    <string name="text_authorize">This app needs permission from the Ambi Climate Cloud to control and read your Ambi devices.</string>
    <string name="button_authorize">Authorize</string>
    <string name="label_authorize_progress">Authenticating…</string>

    <!--Loading overlay-->
    <string name="loading_text">Loading…</string>

    <!--No connection overlay-->
    <string name="no_connection_text">No connection</string>
    <string name="retry_text">Retry</string>

    <!--Error overlay-->
    <string name="overlay_error_text">Oops, something went wrong…</string>
    <string name="reload_text">Reload</string>


    <!-- defaultSharedPreferences keys -->
    <string name="saved_refresh_token_key">RefreshToken</string>
    <string name="saved_access_token_key">AccessToken</string>
    <string name="saved_current_device_key">CurrentDeviceId</string>
    <string name="user_has_configured">UserHasConfigured</string>
</resources>
