<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AuthActivity">

    <!-- Login progress -->

    <TextView
        android:id="@+id/authorize_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_authorize"
        style="@style/H3"/>

    <TextView
        android:id="@+id/authorize_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_authorize"/>


    <Button
        android:id="@+id/authorize_redirect_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_authorize"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"/>
</LinearLayout>