<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        app:title="Ambi Climate Widget"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/intro_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_intro"
            style="@style/H3"/>

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_intro"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/instructions_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_intructions"
            style="@style/H3"/>

        <TextView
            android:id="@+id/instructions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_instructions"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/text_version"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_version"
            android:alpha="0.5"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>