<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/widget_margin">

        <!--Top row-->
        <RelativeLayout
            android:id="@+id/top_row"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!--Settings button-->
            <ImageButton
                android:id="@+id/button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/white"
                android:src="@drawable/ic_icn_settings_24px" />

            <!--Device name-->
            <TextView
                android:id="@+id/roomName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                tools:text="Device name"
                android:textSize="13sp"/>

            <!--Refresh button-->
            <ImageButton
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:padding="5dp"
                android:src="@drawable/ic_icn_cloud_checking_grey" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="2dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:indeterminateTint="@color/black"
                android:visibility="gone"/>

        </RelativeLayout>

        <!--AC stats row-->
        <LinearLayout
            android:id="@+id/stats_row"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/temperature_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_padding"
                android:src="@drawable/ic_icn_acmode_temperature" />

            <TextView
                android:id="@+id/temperature_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding"
                tools:text="23.1"
                android:textSize="13sp"/>

            <ImageView
                android:id="@+id/humidity_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_padding"
                android:layout_marginStart="@dimen/icon_margin"
                android:src="@drawable/ic_icn_glossary_humidity" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding"
                tools:text="61.4"
                android:textSize="13sp"/>

            <ImageView
                android:id="@+id/mode_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_margin"
                android:paddingBottom="@dimen/text_padding"
                android:src="@drawable/ic_icn_acmode_mode"/>

            <TextView
                android:id="@+id/mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding"
                tools:text="Comfort"
                android:textSize="13sp"/>

            <ImageView
                android:id="@+id/geolocation_svg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/text_padding"
                android:layout_marginStart="@dimen/icon_margin"
                android:src="@drawable/ic_icn_geolocation" />

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/text_padding"
                tools:text="Home"
                android:textSize="13sp"/>

        </LinearLayout>

        <!--Feedback button's row-->
        <LinearLayout
            android:id="@+id/feedback_row"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >
            <!--style="@style/feedback_buttons_section">-->

            <Button
                android:id="@+id/button_too_warm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector_too_warm"
                android:fontFamily="@font/avenir_next_medium"
                android:textStyle="bold"
                android:text="@string/too_warm"
                android:textSize="11sp" />

            <Button
                android:id="@+id/button_little_warm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector_little_warm"
                android:fontFamily="@font/avenir"
                android:textStyle="bold"
                android:text="@string/bit_warm"
                android:textSize="11sp" />

            <Button
                android:id="@+id/button_comfy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector_comfy"
                android:fontFamily="@font/avenir"
                android:textStyle="bold"
                android:text="@string/comfy"
                android:textSize="11sp" />

            <Button
                android:id="@+id/button_little_cold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector_little_cold"
                android:fontFamily="@font/avenir"
                android:textStyle="bold"
                android:text="@string/bit_cold"
                android:textSize="11sp" />

            <Button
                android:id="@+id/button_too_cold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_selector_too_cold"
                android:fontFamily="@font/avenir"
                android:textStyle="bold"
                android:text="@string/too_cold"
                android:textSize="11sp" />

            <ImageButton
                android:id="@+id/button_on_off"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_on_off"
                android:background="@drawable/button_selector_on_off"
                android:fontFamily="@font/avenir"
                android:textStyle="bold"
                android:textSize="11sp"
                android:src="@drawable/ic_icn_nav_modes"/>

        </LinearLayout>

    </LinearLayout>
</layout>