<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <!--Top half - Device status-->
    <include
        layout="@layout/fragment_device_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/divider1" />

    <!--Divider-->
    <LinearLayout
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:orientation="horizontal" />

    <!--Lower half - Feedback button's-->
    <LinearLayout
        android:id="@+id/feedback_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/divider1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!--Button too warm-->
        <LinearLayout
            android:id="@+id/container_btn_too_warm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_too_warm"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <ImageButton
                android:id="@+id/button_too_warm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/too_warm"
                android:fontFamily="@font/avenir_next_medium"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_sad"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_too_warm"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <!--Button bit warm-->
        <LinearLayout
            android:id="@+id/container_btn_bit_warm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_bit_warm"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <ImageButton
                android:id="@+id/button_bit_warm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/bit_warm"
                android:fontFamily="@font/avenir"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_indifferent"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bit_warm"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <!--Button comfy-->
        <LinearLayout
            android:id="@+id/container_btn_comfy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_comfy"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <ImageButton
                android:id="@+id/button_comfy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/comfy"
                android:fontFamily="@font/avenir"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_happiness"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_comfy"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <!--Button bit cold-->
        <LinearLayout
            android:id="@+id/container_btn_bit_cold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_bit_cold"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <ImageButton
                android:id="@+id/button_bit_cold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/bit_cold"
                android:fontFamily="@font/avenir"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_indifferent"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bit_cold"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <!--Button too cold-->
        <LinearLayout
            android:id="@+id/container_btn_too_cold"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_too_cold"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <ImageButton
                android:id="@+id/button_too_cold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/too_cold"
                android:fontFamily="@font/avenir"
                android:padding="12dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_sad"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_too_cold"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

        <!--Button mode selection-->
        <LinearLayout
            android:id="@+id/container_btn_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_on_off"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">

            <Button
                android:id="@+id/button_mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_selector_on_off"
                android:text="MODE"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/progress_mode"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>